# kasatomaru

./: .gitignore  CNAME  Dockerfile  Jenkinsfile  README.md  db.py  hello.py  pyproject.toml  requirements.txt
app/: main.py
crawler/: exec.py  websites.txt
process/: extract.py
