[tool.poetry]
name = "kasatomaru"
version = "0.1.0"
description = "Discovery Japanese Immigration"
authors = ["Kenji Koga <koga.k3nj1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
bs4 = "^0.0.1"
lxml = "^4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
